<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:lines="2"
        android:text="@string/Title"
        android:textSize="24sp"
        android:background="@drawable/border_top_bottom"
        app:layout_constraintBottom_toTopOf="@+id/confirmedCases"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/confirmedCases"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:lines="2"
        android:text="@string/ConfirmedCases"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/recovered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/border_top_bottom"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <TextView
        android:id="@+id/active"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:lines="2"
        android:text="@string/ActiveCases"
        android:textSize="18sp"
        android:background="@drawable/border_top_bottom"
        app:layout_constraintBottom_toBottomOf="@+id/recovered"
        app:layout_constraintEnd_toStartOf="@+id/deaths"
        app:layout_constraintStart_toEndOf="@+id/recovered"
        app:layout_constraintTop_toTopOf="@+id/recovered" />

    <TextView
        android:id="@+id/recovered"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:lines="2"
        android:text="@string/RecoveredCases"
        android:textSize="18sp"
        android:background="@drawable/border_top_bottom"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toStartOf="@+id/active"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/confirmedCases" />

    <TextView
        android:id="@+id/deaths"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:lines="2"
        android:text="@string/Deaths"
        android:textSize="18sp"
        android:background="@drawable/border_top_bottom"
        app:layout_constraintBottom_toBottomOf="@+id/recovered"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/active"
        app:layout_constraintTop_toTopOf="@+id/recovered" />

    <ImageButton
        android:id="@+id/mapButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/listButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMap"
        app:srcCompat="@drawable/map"
        android:scaleType="centerInside" />

    <ImageButton
        android:id="@+id/listButton"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="@+id/mapButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/mapButton"
        app:layout_constraintTop_toTopOf="@+id/mapButton"
        app:srcCompat="@drawable/list"
        android:scaleType="centerInside" />

    <TextView
        android:id="@+id/tvMap"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/Map"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/mapButton"
        app:layout_constraintEnd_toEndOf="@+id/mapButton"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/guideline" />

    <TextView
        android:id="@+id/tvList"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:gravity="center"
        android:text="@string/List"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="@+id/tvMap"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/listButton"
        app:layout_constraintTop_toTopOf="@+id/tvMap" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.65" />

</androidx.constraintlayout.widget.ConstraintLayout>